import shared from "../video-shared-with-style";

shared();
