// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "height": 200,
        "width": 300,
      }
    }
  >
    <Image
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    />
    <View
      style={
        Object {
          "bottom": 0,
          "flex": 1,
          "height": 200,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": 300,
          "zIndex": 2,
        }
      }
    >
      <RNSVGSvgView
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "flex": 0,
            "height": 48,
            "width": 48,
          }
        }
      >
        <RNSVGGroup>
          <RNSVGRect />
          <RNSVGPath />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`2. video without a poster image 1`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "height": 200,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "height": 200,
          "width": 300,
        }
      }
    />
    <View
      style={
        Object {
          "bottom": 0,
          "flex": 1,
          "height": 200,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": 300,
          "zIndex": 2,
        }
      }
    >
      <RNSVGSvgView
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "flex": 0,
            "height": 48,
            "width": 48,
          }
        }
      >
        <RNSVGGroup>
          <RNSVGRect />
          <RNSVGPath />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`3. 360 video 1`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "height": 200,
        "width": 300,
      }
    }
  >
    <Image
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    />
    <View
      style={
        Object {
          "bottom": 0,
          "flex": 1,
          "height": 200,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": 300,
          "zIndex": 2,
        }
      }
    >
      <RNSVGSvgView
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "flex": 0,
            "height": 48,
            "width": 48,
          }
        }
      >
        <RNSVGGroup>
          <RNSVGRect />
          <RNSVGPath />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
